Implementado o html da pesquisa, e fazendo com que clientesFiltrados que é um observable receba uma inscrição aqui no html, com $ e o pipe | async

--- a/src/app/components/entidades/clientes/clientes.component.css
+++ b/src/app/components/entidades/clientes/clientes.component.css
@@ -78,7 +78,7 @@ input{
     border: 2px solid #222;
 }
 
-article form input::placeholder{
+input::placeholder{
     padding: 5px;
     background-color: #999;
     color: #fff;
