Fix commit anterior faltando conteúdo

--- a/src/app/components/entidades/clientes/clientes.component.html
+++ b/src/app/components/entidades/clientes/clientes.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <ul class="resultado-pesquisa">
-        <li *ngFor="let c of cFiltrados$ | async" >
+        <li *ngFor="let cliente of clientesFiltrados$ | async" >
           <a>
             {{c}}
           </a>
