--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -6,7 +6,7 @@
     text-align: justify;
     max-width: 1366px;
     margin: 30px auto;
-    background-color: #333;
+    background-color: #222;
     color: #fff;
     display: flex;
     justify-content: space-around;
@@ -14,6 +14,7 @@
     gap: 50px;
     border-radius: 10px;
     padding: 40px;
+    box-shadow: 0px 5px 10px #333;
 }
 
 .descricao{
@@ -32,6 +33,21 @@
 .img{
     width: 400px;
     height: 400px;
+    box-shadow: 0px 5px 10px #151515;
     
     border-radius: 10px;
+}
+
+article div {
+    background-color: #333;
+    border: 2px solid #151515;
+    padding: 30px;
+    box-shadow: 0px 5px 10px #151515;
+    border-radius: 10px;
+}
+
+article div h3{
+    font-size: 35px;
+    color: #43B02A;
+    font-weight: 600;
 }
