--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.css
@@ -5,7 +5,7 @@ article {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: #181818;
+    background-color: #151515;
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
@@ -25,6 +25,7 @@ article form {
     background-color: #333;
     border-radius: 5px;
     padding: 30px;
+    box-shadow: 0px 5px 10px #000;
 }
 
 article form input{
