--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -1,1 +1,13 @@
-<p>cliente-details works!</p>
+<section class="container">
+    <div class="cliente">
+        <p>Nome:</p>
+        <p>Sobrenome:</p>
+        <p>Email:</p>
+    </div>
+
+    <div class="servicos">
+        <p>Titulo:</p>
+        <p>Descricao:</p>
+        <p>Valor:</p>
+    </div>
+</section>
