Implementada a pesquisa de um serviço perante um conteúdo do título

--- a/src/app/components/entidades/servicos/servico.component.html
+++ b/src/app/components/entidades/servicos/servico.component.html
@@ -2,20 +2,42 @@
     <div id="create-button" class="sub-container">
       <button [routerLink]="['/formulario-servico']" type="button" class="botao">Adicionar serviço</button>
     </div>
-  
-    <mat-card class="sub-container" *ngFor="let servico of servicos">
-      <mat-card-title-group class="header">
-        <mat-card-title id="titulo">{{servico.titulo}}</mat-card-title>
-        <div class="icons">
-            <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
-            <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
-        </div>
-      </mat-card-title-group>
-      <mat-card-content class="body">
-        {{servico.descricao}}
-      </mat-card-content>
-      <mat-card-content class="botoes">
-        <button type="submit" class="botao">R$ {{servico.valor}}</button>
-      </mat-card-content>
-    </mat-card>
+
+    <input #inputPesquisa id="input-pesquisa" (input)="pesquisar(inputPesquisa.value)" type="text" placeholder="Servico...">
+
+    <ul *ngFor="let servicoF of servicosFiltrados$ | async">
+      <mat-card class="sub-container">
+        <mat-card-title-group class="header">
+          <mat-card-title id="titulo">{{servicoF.titulo}}</mat-card-title>
+          <div class="icons">
+              <mat-icon class="icon" (click)="deletarServico(servicoF.id)"> delete</mat-icon>
+              <mat-icon class="icon" (click)="enviarIdServico(servicoF.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
+          </div>
+        </mat-card-title-group>
+        <mat-card-content class="body">
+          {{servicoF.descricao}}
+        </mat-card-content>
+        <mat-card-content class="botoes">
+          <button type="submit" class="botao">R$ {{servicoF.valor}}</button>
+        </mat-card-content>
+      </mat-card>
+    </ul>
+    
+    <ul *ngIf="pesquisando">
+      <mat-card class="sub-container" *ngFor="let servico of servicos">
+        <mat-card-title-group class="header">
+          <mat-card-title id="titulo">{{servico.titulo}}</mat-card-title>
+          <div class="icons">
+              <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
+              <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
+          </div>
+        </mat-card-title-group>
+        <mat-card-content class="body">
+          {{servico.descricao}}
+        </mat-card-content>
+        <mat-card-content class="botoes">
+          <button type="submit" class="botao">R$ {{servico.valor}}</button>
+        </mat-card-content>
+      </mat-card>
+    </ul>
   </div>
