Melhoria no estilo da barra de pesquisa do serviço

--- a/src/app/components/entidades/servicos/servico.component.css
+++ b/src/app/components/entidades/servicos/servico.component.css
@@ -61,3 +61,17 @@ justify-content: flex-end;
 flex-direction: column;
 
 }
+
+.input-group {
+    margin-left: 200px;
+    width: 500px;
+}
+
+#icon-pesq {
+    cursor: pointer;
+    background-color: white;
+}
+
+.input-group-text {
+    background-color: white;
+}
