Implementando emissão do clientes para cliente details

--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -1,8 +1,8 @@
 <section class="container">
-    <div class="cliente">
-        <p>Nome:</p>
-        <p>Sobrenome:</p>
-        <p>Email:</p>
+    <div class="">
+        <p>Nome: {{cliente.nome}}</p>
+        <p>Sobrenome: {{cliente.sobrenome}}</p>
+        <p>Email: {{cliente.email}}</p>
     </div>
 
     <div class="servicos">
