--- a/src/app/components/entidades/clientes/clientes.component.html
+++ b/src/app/components/entidades/clientes/clientes.component.html
@@ -19,7 +19,7 @@
     <td class="row-table">{{cliente.sobrenome}}</td>
     <td class="row-table">{{cliente.email}} </td>
     <td class="icons" id="icons-table">
-      <mat-icon (click)="enviarIdCliente(cliente.id)" [routerLink]="['/cliente-details']" class="icon">person_search</mat-icon>
+      <mat-icon (click)="getClienteById(cliente.id)" [routerLink]="['/cliente-details']" class="icon">person_search</mat-icon>
       <mat-icon (click)="enviarIdCliente(cliente.id)" [routerLink]="['/formulario-cliente-update']" class="icon">edit</mat-icon>
       <mat-icon (click)="deletarCliente(cliente.id)" class="icon">delete</mat-icon>
     </td>
