implementando emissões de Cliente

--- a/src/app/components/entidades/cliente-details/cliente-details.component.css
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.css
@@ -1,10 +1,49 @@
 .container{
-    margin: 50px;
+    margin: 50px auto;
     color: black;
     justify-content: center;
     align-items: center;
     
     display: flex;
     flex-direction: column;
-    gap:40px;
 }
+
+.sub-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.controller{
+    display: flex;
+    justify-content: space-between;
+    
+    gap: 30px;
+}
+
+.button{
+    height: 40px;
+    border-radius: 5px;
+    background-color: #43B02A;
+    border: 3px solid #43B02A;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 700;
+}
+.button:hover{
+    border-radius: 5px;
+    background-color: #2c8019;
+    border: 3px solid #2c8019;
+    color: #fff
+}
+
+.lista-servicos{
+    background-color: #333;
+    color: white;
+    margin: 30px auto;
+    padding: 30px;
+    border-radius: 10px;
+}
+
