--- a/src/app/components/entidades/formulario-servico/formulario-servico.component.html
+++ b/src/app/components/entidades/formulario-servico/formulario-servico.component.html
@@ -6,7 +6,7 @@
       
       <label class="label" for="exampleInputEmail1">Descricao</label>
       <input type="text" name="descricao" class="form-control" id="descricao" placeholder="Entre seu descricao" [(ngModel)]="descricao">
-      
+      {{cliente.nome}}
       <label class="label" for="exampleInputEmail1">Valor</label>
       <input type="text" name="email" class="form-control" id="email" placeholder="Entre valor" [(ngModel)]="valor">
     </div>
