--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -15,6 +15,8 @@
                 <p>Titulo:{{servico.titulo}}</p>
                 <p>Descricao:{{servico.titulo}}</p>
                 <p>Valor:{{servico.titulo}}</p>
+                <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
+              <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
             </div>
         </div>
     </div>
