--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -11,13 +11,19 @@
                 <button class = "button" (click) = "listarServicosCliente(cliente)">Servicos</button>
                 <button class = "button" (click) = "enviarCliente(cliente.id)" [routerLink]="['/formulario-servico']">Adicionar Servico</button>
             </div>
-            <div class="lista-servicos" *ngFor="let servico of servicosCliente">
-                <p>Titulo:{{servico.titulo}}</p>
-                <p>Descricao:{{servico.titulo}}</p>
-                <p>Valor:{{servico.titulo}}</p>
-                <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
-              <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
-            </div>
         </div>
+        <div class="row">
+            <div class="col-sm-6" *ngFor="let servico of servicosCliente">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Titulo:{{servico.titulo}}</h5>
+                  <p class="card-text">Descricao:{{servico.titulo}}</p>
+                  <a href="#" class="btn btn-primary">Descricao:{{servico.titulo}}</a>
+                </div>
+                <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
+                <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
+              </div>
+            </div>
+          </div>
     </div>
 </section>
