--- a/src/app/components/entidades/cliente-details/cliente-details.component.css
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.css
@@ -39,4 +39,46 @@
     color: #fff
 }
 
+.row {
+    display: flex;
+    flex-direction: column;
+    width: 680px;
+    justify-content: center;
+    align-items: center;
+}
 
+.card {
+    margin: 20px;
+    box-shadow: 4px 4px 8px rgb(5, 5, 5);
+    font-family: 'Montserrat';
+    font-size: 20px;
+}
+
+.card-title {
+    font-family: 'Montserrat';
+    font-size: 20px;
+}
+
+.btn{
+    height: 40px;
+    border-radius: 5px;
+    background-color: #43B02A;
+    border: 3px solid #43B02A;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.btn:hover{
+    border-radius: 5px;
+    background-color: #2c8019;
+    border: 3px solid #2c8019;
+    color: #fff
+}
+
+.div-icons {
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+
+}
