Melhoria no layout cliente details

--- a/src/app/components/entidades/cliente-details/cliente-details.component.css
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.css
@@ -80,5 +80,17 @@
     display: flex;
     justify-content: flex-end;
     padding: 20px;
+}
 
+.icon {
+    cursor: pointer;
+}
+
+.icon:hover {
+    color: #43B02A;
+}
+
+.details {
+    font-family: 'Montserrat';
+    font-size: 20px;
 }
