--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -1,10 +1,11 @@
 <section class="container">
     <div class="sub-container">
-        <div class="">
-            <p>Nome: {{cliente.nome}}</p>
-            <p>Sobrenome: {{cliente.sobrenome}}</p>
-            <p>Email: {{cliente.email}}</p>
-        </div>
+
+      <ul class="list-group">
+        <li class="list-group-item">{{cliente.nome}}</li>
+        <li class="list-group-item">{{cliente.sobrenome}}</li>
+        <li class="list-group-item">{{cliente.email}}</li>
+      </ul>
     
         <div class="servicos">
             <div class="controller">
