Refatorando projeto para a visão do usuário apenas

--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -22,8 +22,8 @@
                   <!-- <a href="#" class="btn btn-primary">{{servico.valor}}</a> -->
                 </div>
                 <div class="div-icons">
-                  <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
-                <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
+                  <!-- <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
+                <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon> -->
                 </div>
               </div>
             </div>
