--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
@@ -23,8 +23,8 @@
         </div>
 
         <div class="links">
-            <p [routerLink]="['/login-admin']" class="link">Login como administrador</p>
-            <p [routerLink]="['/cadastro']" class="link">Cadastre-se como usuário</p>
+            <!-- <p [routerLink]="['/login-admin']" class="link">Login como administrador</p> -->
+            <p [routerLink]="['/cadastro']" class="link">Cadastre-se</p>
         </div>
     </form>
 </article>
