--- a/src/app/components/entidades/clientes/clientes.component.css
+++ b/src/app/components/entidades/clientes/clientes.component.css
@@ -31,14 +31,13 @@ td {
 
 #icons-table {
     display: flex;
-    
+    width: 100%;
 }
 
 .icon {
     cursor: pointer;
     padding: 20px 30px;
     display: flex;
-    justify-content: center;
     align-items: center;
     color: #333;
 }
