Removendo o botão de adicionar serviços do cliente details

--- a/src/app/components/entidades/cliente-details/cliente-details.component.html
+++ b/src/app/components/entidades/cliente-details/cliente-details.component.html
@@ -10,7 +10,7 @@
         <div class="servicos">
             <div class="controller">
                 <button class = "button" (click) = "listarServicosCliente(cliente)">Servicos</button>
-                <button class = "button" (click) = "enviarCliente(cliente.id)" [routerLink]="['/formulario-servico']">Adicionar Servico</button>
+                <!-- <button class = "button" (click) = "enviarCliente(cliente.id)" [routerLink]="['/formulario-servico']">Adicionar Servico</button> -->
             </div>
         </div>
         <div class="row">
