--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="container-menu">
       <img [routerLink]="['/']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
       <h3 class="item" [routerLink]="['/servicos']">Serviços</h3>
-      <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
+      <h3 class="item" [routerLink]="['/professores']">Professores</h3>
   </div>
 
   <div class="container-options">
