--- a/src/app/components/entidades/professor-update-formulario/professor-update-formulario.component.html
+++ b/src/app/components/entidades/professor-update-formulario/professor-update-formulario.component.html
@@ -12,7 +12,7 @@
       </div>
       
       <div class="control">
-        <p class="voltar" [routerLink]="['/clientes']">Voltar</p>
+        <p class="voltar" [routerLink]="['/professores']">Voltar</p>
         <button type="submit" class="botao">Enviar</button>
       </div>
     </form>
