--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6" *ngFor="let cursos of cursosProfessor">
+            <div class="col-sm-6" *ngFor="let curso of cursosProfessor">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">{{curso.titulo}}</h5>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="div-icons">
                   <!-- <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
-                <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon> -->
+                <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/curso-update-formulario']">edit</mat-icon> -->
                 </div>
               </div>
             </div>
