--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -19,9 +19,9 @@
       <td class="row-table">{{professor.sobrenome}}</td>
       <td class="row-table">{{professor.email}} </td>
       <td class="icons" id="icons-table">
-        <!-- <mat-icon (click)="enviarIdProfessor(professor.id)" [routerLink]="['/formulario-cliente-update']" class="icon">edit</mat-icon>
+        <!-- <mat-icon (click)="enviarIdProfessor(professor.id)" [routerLink]="['/professor-update-formulario']" class="icon">edit</mat-icon>
           <mat-icon (click)="deletarProfessor(cliente.id)" class="icon">delete</mat-icon> -->
-          <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/cliente-details']" class="icon">person_search</mat-icon>
+          <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']" class="icon">person_search</mat-icon>
       </td>
     </tr>
     </tbody>
