--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6" *ngFor="let cursos of cursosProfessor">
+            <div class="col-sm-6" *ngFor="let curso of cursosProfessor">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">{{curso.titulo}}</h5>
