--- a/src/app/components/entidades/cursos/cursos.component.css
+++ b/src/app/components/entidades/cursos/cursos.component.css
@@ -22,10 +22,24 @@ div .cursos{
 
 div.card{
     margin: 20px 0;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 2px #999;
 }
 
 div button.btn {
     width: 10vw;
+
+    border: 1px solid black;
+
+    color: black;
+    font-weight: 500;
+}
+
+div button.btn:hover {
+    border: 1px solid #A435F0;
+    background-color: #A435F0;
+    color: #fff;
 }
 
 .card-text{
