--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<!-- <table class="table table-striped">
     <thead>
     <tr class="header">
       <th class="row-table" scope="col">Nome</th>
@@ -18,10 +18,10 @@
       <td id="nome" class="row-table">{{professor.nome}}</td>
       <td class="row-table">{{professor.sobrenome}}</td>
       <td class="row-table">{{professor.email}} </td>
-      <td class="icons" id="icons-table">
+      <td class="icons" id="icons-table"> -->
         <!-- <mat-icon (click)="enviarIdProfessor(professor.id)" [routerLink]="['/professor-update-formulario']" class="icon">edit</mat-icon>
           <mat-icon (click)="deletarProfessor(cliente.id)" class="icon">delete</mat-icon> -->
-          <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']" class="icon">person_search</mat-icon>
+          <!-- <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']" class="icon">person_search</mat-icon>
       </td>
     </tr>
     </tbody>
@@ -30,10 +30,29 @@
         <td id="nome" class="row-table">{{professorF.nome}}</td>
         <td class="row-table">{{professorF.sobrenome}}</td>
         <td class="row-table">{{professorF.email}} </td>
-        <td class="icons" id="icons-table">
+        <td class="icons" id="icons-table"> -->
           <!-- <mat-icon (click)="deletarProfessor(professorF.id)" class="icon">delete</mat-icon> -->
-          <mat-icon (click)="enviarIdProfessor(professorF.id)" [routerLink]="['/formulario-cliente-update']" class="icon">edit</mat-icon>
+          <!-- <mat-icon (click)="enviarIdProfessor(professorF.id)" [routerLink]="['/formulario-cliente-update']" class="icon">edit</mat-icon>
         </td>
       </tr>
       </tbody>
-  </table>
+  </table> -->
+
+  <div class="card w-75" *ngFor="let professor of getProfessores">
+    <div class="row no-gutters" >
+      <div class="col-md-4">
+        <img src="\assets\img\javaImg.jpg" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <div class="infos">
+            <h5 class="card-title">{{professor.nome}} {{professor.sobrenome}}</h5>
+            <p class="card-text">{{professor.email}}</p>
+          </div>
+          <div class="tools">
+            <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']" class="icon">person_search</mat-icon>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
