--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar">
   <div class="controller">
     <a class="navbar-brand" href="#">
       <img [routerLink]="['/']" src="assets\img\Consult-logo.png" width="140" height="60" class="d-inline-block align-top" alt="">
