--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="controller">
     <a class="navbar-brand" href="#">
-      <img [routerLink]="['/']" src="assets\img\Consult-logo.png" width="140" height="60" class="d-inline-block align-top" alt="">
+      <img [routerLink]="['/']" src="assets\img\udeyou-logo.png" width="150" height="60" class="d-inline-block align-top" alt="">
     </a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
