--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -37,6 +37,14 @@
       </tr>
       </tbody>
   </table> -->
+  
+<div class="container">
+  <div class="input-group">
+    <input class="form-control" type="search" aria-label="Search" #inputPesquisa id="input-pesquisa" (input)="pesquisar(inputPesquisa.value)" type="text" placeholder="Curso...">
+      <div class="input-group-append">
+      <div class="input-group-text"><mat-icon id="icon-pesq" class="material-icons-outlined">search</mat-icon></div>
+    </div>
+  </div>
 
   <div class="card w-75" *ngFor="let professor of getProfessores">
     <div class="row no-gutters" >
@@ -49,10 +57,10 @@
             <h5 class="card-title">{{professor.nome}} {{professor.sobrenome}}</h5>
             <p class="card-text">{{professor.email}}</p>
           </div>
-          <div class="tools">
-            <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']" class="icon">person_search</mat-icon>
-          </div>
+        <div class="tools">
+          <mat-icon (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']" class="icon">person_search</mat-icon>
         </div>
       </div>
     </div>
   </div>
+</div>
